force-app/main/default/objects/WorkStep/fields/MSN_Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>MSN_Answer_Type__c</fullName>
    <description>Used to define the Type of Answer that is expected for this Work Step (e.g. String, Date, Boolean, Picklist , URL). Please note: If &quot;Picklist&quot; is chosen, at least 2 &quot;Work Step Answers&quot; have to be added to this Work Step Template. If &quot;URL&quot; is chose, you have to populate a URL into the field &quot;External URL&quot; on the Work Step Template.</description>
    <inlineHelpText>Defines what type of answer is expected for this Work Step.</inlineHelpText>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSN_Work_Steps_Field_Type</valueSetName>
    </valueSet>
</CustomField>