force-app/main/default/objects/WorkStep/fields/MSN_EAM_WO_Reference__c.field-meta.xml
<CustomField>
    <fullName>MSN_EAM_WO_Reference__c</fullName>
    <description>This formula field is used to retrieve the correct EAM Work Order Number for the Subcontractor claim. If the Work Step is related to a WOLI, then use the EAM Work Order Number from WOLI, else use the EAM Work Order Number from the Work Order related to the Work Step.</description>
    <formula>IF(ISBLANK(WorkOrderLineItemId),WorkOrder.Work_Order_No__c, WorkOrderLineItem.MSN_EAM_Work_Order_No__c )</formula>
    <inlineHelpText>Use this EAM reference number for your subcontractor claim</inlineHelpText>
    <label>EAM Work Order Referenc</label>
    <type>Text</type>
</CustomField>