force-app/main/default/objects/WorkStep/fields/MSN_Mandatory_WorkStep__c.field-meta.xml
<CustomField>
    <fullName>MSN_Mandatory_WorkStep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to flag, whether the Work Step is mandatory to answer by the field crew.</description>
    <inlineHelpText>This Work Step has to be answered</inlineHelpText>
    <label>Is Mandatory</label>
    <type>Checkbox</type>
</CustomField>