force-app/main/default/objects/WorkStep/fields/MSN_RelatedAssetName__c.field-meta.xml
<CustomField>
    <fullName>MSN_RelatedAssetName__c</fullName>
    <description>This Cross Object Formula is used to determine the related Asset Name of the Work Order or Work Order Line Item in order to show this in on the &quot;Work Step&quot; on the Field Service Mobile App.</description>
    <formula>IF(NOT(ISBLANK(WorkOrderLineItemId) || ISBLANK( WorkOrderLineItem.AssetId) ) ,  WorkOrderLineItem.Asset.Name ,  IF(NOT(ISBLANK( WorkOrderId)|| ISBLANK( WorkOrder.AssetId)),  WorkOrder.Asset.Name , &quot;None&quot;) )</formula>
    <label>Related Asset</label>
    <type>Text</type>
</CustomField>