force-app/main/default/objects/WorkStep/fields/MSN_SF_WO_Reference__c.field-meta.xml
<CustomField>
    <fullName>MSN_SF_WO_Reference__c</fullName>
    <description>This formula field is used to retrieve the correct Salesforce Work Order Number for the Subcontractor claim. If the Work Step is related to a WOLI, then use the Work Order Line Item Number from WOLI, else use the Work Order Number from the Work Order related to the Work Step.</description>
    <formula>IF(ISBLANK(WorkOrderLineItemId), WorkOrder.WorkOrderNumber ,  WorkOrderLineItem.LineItemNumber)</formula>
    <label>SF Work Order Reference</label>
    <type>Text</type>
</CustomField>