force-app/main/default/objects/WorkStep/fields/MSN_SPOT_Code__c.field-meta.xml
<CustomField>
    <fullName>MSN_SPOT_Code__c</fullName>
    <description>SPOT Codes are used by MSN/Watercare in subsequent systems (e.g. finance and GIS) for invoicing and asset records.</description>
    <externalId>true</externalId>
    <inlineHelpText>Please enter the SPOT code that should be applied for this work step (e.g. 1060).</inlineHelpText>
    <label>SPOT Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>