force-app/main/default/objects/WorkStep/fields/MSN_Work_Step_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>MSN_Work_Step_Template_Id__c</fullName>
    <description>Used to map the ID of the &quot;Work Step Template&quot; record into the &quot;Work Step&quot; upon creation. The ID is used in Field Service Mobile Flows to look-up the originating &quot;Work Step Template&quot; and its related &quot;Work Step Answers&quot; for every Work Step in order to show a choice record set of possible answers to the user in the flow.</description>
    <label>Work Step Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>