force-app/main/default/objects/WorkStep/fields/MSN_WorkPlan_Name__c.field-meta.xml
<CustomField>
    <fullName>MSN_WorkPlan_Name__c</fullName>
    <description>Used on the Field Service Mobile App in order to show the user the related &quot;Work Plan Name&quot; on each Work Step they have to answer (aka Spot Questions) to provide more context about what they are answering each question for.</description>
    <formula>WorkPlan.Name</formula>
    <label>Work Plan Name</label>
    <type>Text</type>
</CustomField>