force-app/main/default/objects/WorkStep/fields/MSN_WorkStep_Answer__c.field-meta.xml
<CustomField>
    <fullName>MSN_WorkStep_Answer__c</fullName>
    <description>Used to record the Answer that has been given to a Work Step question via the Flow &quot;MSN - Field Service Mobile App - Work Step Answers&quot; as part of a Work Plan for a given Work Order.</description>
    <label>Work Step Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>