force-app/main/default/objects/WorkStep/fields/MSN_WS_Date_Answer__c.field-meta.xml
<CustomField>
    <fullName>MSN_WS_Date_Answer__c</fullName>
    <description>This is used in the Field Service Mobile App to capture Work Steps (aka Spot Codes) that require a &quot;Date&quot; answer.</description>
    <label>Date Answer</label>
    <type>Date</type>
</CustomField>