force-app/main/default/objects/WorkStep/fields/MSN_WS_DateTime_Answer__c.field-meta.xml
<CustomField>
    <fullName>MSN_WS_DateTime_Answer__c</fullName>
    <description>This is used in the Field Service Mobile App to capture Work Steps (aka Spot Codes) that require a &quot;Date&quot; or &quot;Time&quot; answer. This will then be transformed either to a proper &quot;Date&quot; field or a &quot;Time&quot; field depending on the answer type by another record triggered flow.</description>
    <label>Date/Time Answer</label>
    <type>DateTime</type>
</CustomField>