force-app/main/default/objects/WorkStep/fields/MSN_WS_Time_Answer__c.field-meta.xml
<CustomField>
    <fullName>MSN_WS_Time_Answer__c</fullName>
    <formula>LEFT (RIGHT (TEXT ( MSN_WS_DateTime_Answer__c - (12/24) ), 9), 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Answer</label>
    <type>Text</type>
</CustomField>