force-app/main/default/objects/WorkStep/recordTypes/MSN_Work_Step.recordType-meta.xml
<RecordType>
    <fullName>MSN_Work_Step</fullName>
    <active>true</active>
    <description>Used to show Work Step Questions (aka Spot Questions) to Field Crew User on the FSL Mobile App and and collect their answers.</description>
    <label>Work Step</label>
</RecordType>